# Stream

./: .env.example  .gitignore  AYAR.yml  Dockerfile  ReadMe.md  ReadMe_FR.md  ReadMe_HI.md  ReadMe_RU.md  ReadMe_TR.md  ReadMe_UK.md  ReadMe_ZH.md  build_assets.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: caprover.yml
Core/: Motor.py  __init__.py
Core/Modules/: _IP_Log.py  __init__.py  _guard.py  _hata.py  _istek.py  _security.py
Public/API/v1/Libs/: __init__.py  ytdlp_service.py
Public/API/v1/Routers/: __init__.py  extract.py  get_all_plugins.py  get_main_page.py  get_plugin.py  get_plugin_names.py  global_search.py  load_item.py  load_links.py  schema.py  search.py  ytdlp_extract.py
Public/Home/Libs/: __init__.py  helpers.py  provider_client.py
Public/Home/Routers/: __init__.py  ana_sayfa.py  ara.py  eklenti.py  icerik.py  izle.py  kategori.py  seo.py
Public/Home/Static/CSS/: style.css
Public/Home/Static/JS/: branding.js  dom-utils.js  global-search.js  main.js  player.js  service-detector.js  video-utils.js
Public/Home/Templates/: _html_taban.html.j2
Public/Home/Templates/components/: breadcrumbs.html.j2  footer.html.j2  header.html.j2
Public/Home/Templates/pages/: category.html.j2  content.html.j2  error.html.j2  home.html.j2  player.html.j2  plugin_detail.html.j2  (+1 more)
Public/Home/Translations/: en.json  fr.json  hi.json  ru.json  tr.json  uk.json  zh.json
Public/Proxy/Libs/: __init__.py  helpers.py  segment_cache.py
Public/Proxy/Routers/: __init__.py  subtitle.py  video.py
Settings/: __init__.py
(+29 files in other folders)
