[project]
name         = "Stream"
version      = "0.1.0"
dependencies = [
    "Kekik",
    "httpx[http2]",
    "fastapi",
    "uvicorn",
    "uvloop; sys_platform != 'win32'",
    "httptools",
    "gunicorn",
    "user_agents",
    "PyYAML",
    "Jinja2",
    "python-multipart",
    "python-dotenv",
    "csscompressor",
    "rjsmin",
    "KekikStream>=3.2.5",
    "yt-dlp[default,curl-cffi]",
]

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
